--- a/templates/ethical_test.html
+++ b/templates/ethical_test.html
@@ -6,10 +6,10 @@
 </style>
 
 <div class="container">
-    <h1>My First PROPER (with responsive) Cloud based Web Application</h1>
-    <form action="/main" method="post">
-        <p><h2>Welcome to Hugging Face Ethical Test, my name is Thousand Ask?</h2></p>
-        <p><input type="text" name="name"></p>
+    <h1>Accepting gifts from a client in a competitive bidding process is ethically permissible.</h1>
+    <form action="/answer" method="post">
+        <p><input type="radio" name="options" id="true" value="True">true</input></p>
+        <p><input type="radio" name="options" id="false" value="False">false</input></p>
         <p><input type="submit" value="Enter"></p>
     </form>
 </div>
