--- a/templates/wrong.html
+++ b/templates/wrong.html
@@ -6,10 +6,11 @@
 </style>
 
 <div class="container">
-    <h1>My First PROPER (with responsive) Cloud based Web Application</h1>
+    <h2>Are you stupid? Your answer is wrong</h2>
     <form action="/main" method="post">
-        <p><h2>Welcome to Hugging Face Ethical Test, my name is Thousand Ask?</h2></p>
-        <p><input type="text" name="name"></p>
-        <p><input type="submit" value="Enter"></p>
+        <p><input type="submit" value="Main"></p>
+    </form>
+    <form action="/end" method="post">
+        <p><input type="submit" value="End"></p>
     </form>
 </div>
