--- a/templates/ethical_test.html
+++ b/templates/ethical_test.html
@@ -8,8 +8,8 @@
 <div class="container">
     <h1>Accepting gifts from a client in a competitive bidding process is ethically permissible.</h1>
     <form action="/answer" method="post">
-        <p><input type="radio" name="options" id="true" value="True">true</input></p>
-        <p><input type="radio" name="options" id="false" value="False">false</input></p>
+        <p><input type="radio" name="options" id="true" value="true">true</input></p>
+        <p><input type="radio" name="options" id="false" value="false">false</input></p>
         <p><input type="submit" value="Enter"></p>
     </form>
 </div>
